--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -488,9 +488,14 @@
             <a href="{{ url_for('main.demo') }}" class="btn btn-success btn-lg me-3">
                 <i class="bi bi-play-circle"></i> Prøv demo
             </a>
-            <a href="{{ url_for('main.register') }}" class="btn btn-primary btn-lg">
+            <a href="{{ url_for('main.register') }}" class="btn btn-primary btn-lg me-3">
                 <i class="bi bi-person-plus"></i> Kom i gang
             </a>
+            {% if current_user.is_authenticated %}
+            <a href="{{ url_for('achievements_bp.index') }}" class="btn btn-warning btn-lg">
+                <i class="bi bi-trophy"></i> Mine oppnåelser
+            </a>
+            {% endif %}
         </div>
         
         <!-- ROI Calculator Promotion -->
