--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -329,7 +329,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('stocks.list_oslo') }}">
                                 <i class="bi bi-flag"></i> Oslo Børs
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('stocks.list_global') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('stocks.global_list') }}">
                                 <i class="bi bi-globe"></i> Globale aksjer
                             </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('stocks.list_crypto') }}">
