--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -696,7 +696,7 @@
                                 <li><a class="dropdown-item" href="{{ url_for('main.profile') }}">
                                     <i class="bi bi-person"></i> Profil
                                 </a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('achievements_bp.index') }}">
+                                <li><a class="dropdown-item" href="{{ url_for('achievements.index') }}">
                                     <i class="bi bi-trophy"></i> Oppnåelser
                                 </a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.settings') }}">
